--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +37,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://1101surabhi.github.io/food-order-app/"
+  "homepage": "https://1101surabhi.github.io/food-order-app/",
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
+  }
 }
